wx-core/include/generated/ffi_t.h

// CLASS: wxTreeCtrl
wxClassInfo *wxTreeCtrl_CLASSINFO();
wxTreeCtrl *wxTreeCtrl_new();
wxTreeCtrl *wxTreeCtrl_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
wxTreeItemId *wxTreeCtrl_AddRoot(wxTreeCtrl * self, const wxString * text, int image, int sel_image, wxTreeItemData * data);
wxTreeItemId *wxTreeCtrl_AppendItem(wxTreeCtrl * self, const wxTreeItemId * parent, const wxString * text, int image, int sel_image, wxTreeItemData * data);
void wxTreeCtrl_AssignButtonsImageList(wxTreeCtrl * self, wxImageList * image_list);
void wxTreeCtrl_AssignStateImageList(wxTreeCtrl * self, wxImageList * image_list);
void wxTreeCtrl_Collapse(wxTreeCtrl * self, const wxTreeItemId * item);
void wxTreeCtrl_CollapseAll(wxTreeCtrl * self);
void wxTreeCtrl_CollapseAllChildren(wxTreeCtrl * self, const wxTreeItemId * item);
void wxTreeCtrl_CollapseAndReset(wxTreeCtrl * self, const wxTreeItemId * item);
bool wxTreeCtrl_Create(wxTreeCtrl * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
void wxTreeCtrl_Delete(wxTreeCtrl * self, const wxTreeItemId * item);
void wxTreeCtrl_DeleteAllItems(wxTreeCtrl * self);
void wxTreeCtrl_DeleteChildren(wxTreeCtrl * self, const wxTreeItemId * item);
wxTextCtrl * wxTreeCtrl_EditLabel(wxTreeCtrl * self, const wxTreeItemId * item, wxClassInfo * text_ctrl_class);
void wxTreeCtrl_EnableBellOnNoMatch(wxTreeCtrl * self, bool on);
void wxTreeCtrl_EndEditLabel(wxTreeCtrl * self, const wxTreeItemId * item, bool discard_changes);
void wxTreeCtrl_EnsureVisible(wxTreeCtrl * self, const wxTreeItemId * item);
void wxTreeCtrl_Expand(wxTreeCtrl * self, const wxTreeItemId * item);
void wxTreeCtrl_ExpandAll(wxTreeCtrl * self);
void wxTreeCtrl_ExpandAllChildren(wxTreeCtrl * self, const wxTreeItemId * item);
bool wxTreeCtrl_GetBoundingRect(const wxTreeCtrl * self, const wxTreeItemId * item, wxRect * rect, bool text_only);
wxImageList * wxTreeCtrl_GetButtonsImageList(const wxTreeCtrl * self);
size_t wxTreeCtrl_GetChildrenCount(const wxTreeCtrl * self, const wxTreeItemId * item, bool recursively);
unsigned int wxTreeCtrl_GetCount(const wxTreeCtrl * self);
wxTextCtrl * wxTreeCtrl_GetEditControl(const wxTreeCtrl * self);
wxTreeItemId *wxTreeCtrl_GetFirstChild(const wxTreeCtrl * self, const wxTreeItemId * item, wxTreeItemIdValue * cookie);
wxTreeItemId *wxTreeCtrl_GetFirstVisibleItem(const wxTreeCtrl * self);
wxTreeItemId *wxTreeCtrl_GetFocusedItem(const wxTreeCtrl * self);
void wxTreeCtrl_ClearFocusedItem(wxTreeCtrl * self);
void wxTreeCtrl_SetFocusedItem(wxTreeCtrl * self, const wxTreeItemId * item);
unsigned int wxTreeCtrl_GetIndent(const wxTreeCtrl * self);
unsigned int wxTreeCtrl_GetSpacing(const wxTreeCtrl * self);
wxColour *wxTreeCtrl_GetItemBackgroundColour(const wxTreeCtrl * self, const wxTreeItemId * item);
wxTreeItemData * wxTreeCtrl_GetItemData(const wxTreeCtrl * self, const wxTreeItemId * item);
wxFont *wxTreeCtrl_GetItemFont(const wxTreeCtrl * self, const wxTreeItemId * item);
wxTreeItemId *wxTreeCtrl_GetItemParent(const wxTreeCtrl * self, const wxTreeItemId * item);
int wxTreeCtrl_GetItemState(const wxTreeCtrl * self, const wxTreeItemId * item);
wxString *wxTreeCtrl_GetItemText(const wxTreeCtrl * self, const wxTreeItemId * item);
wxColour *wxTreeCtrl_GetItemTextColour(const wxTreeCtrl * self, const wxTreeItemId * item);
wxTreeItemId *wxTreeCtrl_GetLastChild(const wxTreeCtrl * self, const wxTreeItemId * item);
wxTreeItemId *wxTreeCtrl_GetNextChild(const wxTreeCtrl * self, const wxTreeItemId * item, wxTreeItemIdValue * cookie);
wxTreeItemId *wxTreeCtrl_GetNextSibling(const wxTreeCtrl * self, const wxTreeItemId * item);
wxTreeItemId *wxTreeCtrl_GetNextVisible(const wxTreeCtrl * self, const wxTreeItemId * item);
wxTreeItemId *wxTreeCtrl_GetPrevSibling(const wxTreeCtrl * self, const wxTreeItemId * item);
wxTreeItemId *wxTreeCtrl_GetPrevVisible(const wxTreeCtrl * self, const wxTreeItemId * item);
bool wxTreeCtrl_GetQuickBestSize(const wxTreeCtrl * self);
wxTreeItemId *wxTreeCtrl_GetRootItem(const wxTreeCtrl * self);
wxTreeItemId *wxTreeCtrl_GetSelection(const wxTreeCtrl * self);
size_t wxTreeCtrl_GetSelections(const wxTreeCtrl * self, wxArrayTreeItemIds * selection);
wxImageList * wxTreeCtrl_GetStateImageList(const wxTreeCtrl * self);
wxTreeItemId *wxTreeCtrl_HitTest(const wxTreeCtrl * self, const wxPoint * point, int * flags);
wxTreeItemId *wxTreeCtrl_InsertItem(wxTreeCtrl * self, const wxTreeItemId * parent, const wxTreeItemId * previous, const wxString * text, int image, int sel_image, wxTreeItemData * data);
wxTreeItemId *wxTreeCtrl_InsertItem1(wxTreeCtrl * self, const wxTreeItemId * parent, size_t pos, const wxString * text, int image, int sel_image, wxTreeItemData * data);
bool wxTreeCtrl_IsBold(const wxTreeCtrl * self, const wxTreeItemId * item);
bool wxTreeCtrl_IsEmpty(const wxTreeCtrl * self);
bool wxTreeCtrl_IsExpanded(const wxTreeCtrl * self, const wxTreeItemId * item);
bool wxTreeCtrl_IsSelected(const wxTreeCtrl * self, const wxTreeItemId * item);
bool wxTreeCtrl_IsVisible(const wxTreeCtrl * self, const wxTreeItemId * item);
bool wxTreeCtrl_ItemHasChildren(const wxTreeCtrl * self, const wxTreeItemId * item);
int wxTreeCtrl_OnCompareItems(wxTreeCtrl * self, const wxTreeItemId * item1, const wxTreeItemId * item2);
wxTreeItemId *wxTreeCtrl_PrependItem(wxTreeCtrl * self, const wxTreeItemId * parent, const wxString * text, int image, int sel_image, wxTreeItemData * data);
void wxTreeCtrl_ScrollTo(wxTreeCtrl * self, const wxTreeItemId * item);
void wxTreeCtrl_SelectItem(wxTreeCtrl * self, const wxTreeItemId * item, bool select);
void wxTreeCtrl_SetButtonsImageList(wxTreeCtrl * self, wxImageList * image_list);
void wxTreeCtrl_SetIndent(wxTreeCtrl * self, unsigned int indent);
void wxTreeCtrl_SetSpacing(wxTreeCtrl * self, unsigned int spacing);
void wxTreeCtrl_SetItemBackgroundColour(wxTreeCtrl * self, const wxTreeItemId * item, const wxColour * col);
void wxTreeCtrl_SetItemBold(wxTreeCtrl * self, const wxTreeItemId * item, bool bold);
void wxTreeCtrl_SetItemData(wxTreeCtrl * self, const wxTreeItemId * item, wxTreeItemData * data);
void wxTreeCtrl_SetItemDropHighlight(wxTreeCtrl * self, const wxTreeItemId * item, bool highlight);
void wxTreeCtrl_SetItemFont(wxTreeCtrl * self, const wxTreeItemId * item, const wxFont * font);
void wxTreeCtrl_SetItemHasChildren(wxTreeCtrl * self, const wxTreeItemId * item, bool has_children);
void wxTreeCtrl_SetItemState(wxTreeCtrl * self, const wxTreeItemId * item, int state);
void wxTreeCtrl_SetItemText(wxTreeCtrl * self, const wxTreeItemId * item, const wxString * text);
void wxTreeCtrl_SetItemTextColour(wxTreeCtrl * self, const wxTreeItemId * item, const wxColour * col);
void wxTreeCtrl_SetQuickBestSize(wxTreeCtrl * self, bool quick_best_size);
void wxTreeCtrl_SetStateImageList(wxTreeCtrl * self, wxImageList * image_list);
void wxTreeCtrl_SetWindowStyle(wxTreeCtrl * self, long styles);
void wxTreeCtrl_SortChildren(wxTreeCtrl * self, const wxTreeItemId * item);
void wxTreeCtrl_Toggle(wxTreeCtrl * self, const wxTreeItemId * item);
void wxTreeCtrl_ToggleItemSelection(wxTreeCtrl * self, const wxTreeItemId * item);
void wxTreeCtrl_Unselect(wxTreeCtrl * self);
void wxTreeCtrl_UnselectAll(wxTreeCtrl * self);
void wxTreeCtrl_UnselectItem(wxTreeCtrl * self, const wxTreeItemId * item);
void wxTreeCtrl_SelectChildren(wxTreeCtrl * self, const wxTreeItemId * parent);
// CLASS: wxTreeEvent
wxClassInfo *wxTreeEvent_CLASSINFO();
wxTreeItemId *wxTreeEvent_GetItem(const wxTreeEvent * self);
int wxTreeEvent_GetKeyCode(const wxTreeEvent * self);
wxKeyEvent *wxTreeEvent_GetKeyEvent(const wxTreeEvent * self);
wxString *wxTreeEvent_GetLabel(const wxTreeEvent * self);
wxTreeItemId *wxTreeEvent_GetOldItem(const wxTreeEvent * self);
wxPoint *wxTreeEvent_GetPoint(const wxTreeEvent * self);
bool wxTreeEvent_IsEditCancelled(const wxTreeEvent * self);
void wxTreeEvent_SetToolTip(wxTreeEvent * self, const wxString * tooltip);
// CLASS: wxTreeItemData
void wxTreeItemData_delete(wxTreeItemData *self);
wxTreeItemData *wxTreeItemData_new();
wxTreeItemId *wxTreeItemData_GetId(const wxTreeItemData * self);
void wxTreeItemData_SetId(wxTreeItemData * self, const wxTreeItemId * id);
// CLASS: wxTreeItemId
void wxTreeItemId_delete(wxTreeItemId *self);
wxTreeItemId *wxTreeItemId_new();
bool wxTreeItemId_IsOk(const wxTreeItemId * self);
void * wxTreeItemId_GetID(const wxTreeItemId * self);
void wxTreeItemId_Unset(wxTreeItemId * self);