wx-core/src/generated/ffi_t.rs


    // wxTreeCtrl
    pub fn wxTreeCtrl_CLASSINFO() -> *mut c_void;
    pub fn wxTreeCtrl_new() -> *mut c_void;
    pub fn wxTreeCtrl_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxTreeCtrl_~wxTreeCtrl(self_: *mut c_void);
    pub fn wxTreeCtrl_AddRoot(
        self_: *mut c_void,
        text: *const c_void,
        image: c_int,
        sel_image: c_int,
        data: *mut c_void,
    ) -> *mut c_void;
    pub fn wxTreeCtrl_AppendItem(
        self_: *mut c_void,
        parent: *const c_void,
        text: *const c_void,
        image: c_int,
        sel_image: c_int,
        data: *mut c_void,
    ) -> *mut c_void;
    pub fn wxTreeCtrl_AssignButtonsImageList(self_: *mut c_void, image_list: *mut c_void);
    pub fn wxTreeCtrl_AssignStateImageList(self_: *mut c_void, image_list: *mut c_void);
    pub fn wxTreeCtrl_Collapse(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_CollapseAll(self_: *mut c_void);
    pub fn wxTreeCtrl_CollapseAllChildren(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_CollapseAndReset(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxTreeCtrl_Delete(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_DeleteAllItems(self_: *mut c_void);
    pub fn wxTreeCtrl_DeleteChildren(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_EditLabel(
        self_: *mut c_void,
        item: *const c_void,
        text_ctrl_class: *mut c_void,
    ) -> *mut c_void;
    pub fn wxTreeCtrl_EnableBellOnNoMatch(self_: *mut c_void, on: bool);
    pub fn wxTreeCtrl_EndEditLabel(self_: *mut c_void, item: *const c_void, discard_changes: bool);
    pub fn wxTreeCtrl_EnsureVisible(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_Expand(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_ExpandAll(self_: *mut c_void);
    pub fn wxTreeCtrl_ExpandAllChildren(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_GetBoundingRect(
        self_: *const c_void,
        item: *const c_void,
        rect: *mut c_void,
        text_only: bool,
    ) -> bool;
    pub fn wxTreeCtrl_GetButtonsImageList(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetChildrenCount(
        self_: *const c_void,
        item: *const c_void,
        recursively: bool,
    ) -> usize;
    pub fn wxTreeCtrl_GetCount(self_: *const c_void) -> c_uint;
    pub fn wxTreeCtrl_GetEditControl(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetFirstChild(
        self_: *const c_void,
        item: *const c_void,
        cookie: *mut c_void,
    ) -> *mut c_void;
    pub fn wxTreeCtrl_GetFirstVisibleItem(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetFocusedItem(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_ClearFocusedItem(self_: *mut c_void);
    pub fn wxTreeCtrl_SetFocusedItem(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_GetIndent(self_: *const c_void) -> c_uint;
    pub fn wxTreeCtrl_GetSpacing(self_: *const c_void) -> c_uint;
    pub fn wxTreeCtrl_GetItemBackgroundColour(
        self_: *const c_void,
        item: *const c_void,
    ) -> *mut c_void;
    pub fn wxTreeCtrl_GetItemData(self_: *const c_void, item: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetItemFont(self_: *const c_void, item: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxTreeCtrl_GetItemImage(self_: *const c_void, item: *const c_void, which: wxTreeItemIcon) -> c_int;
    pub fn wxTreeCtrl_GetItemParent(self_: *const c_void, item: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetItemState(self_: *const c_void, item: *const c_void) -> c_int;
    pub fn wxTreeCtrl_GetItemText(self_: *const c_void, item: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetItemTextColour(self_: *const c_void, item: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetLastChild(self_: *const c_void, item: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetNextChild(
        self_: *const c_void,
        item: *const c_void,
        cookie: *mut c_void,
    ) -> *mut c_void;
    pub fn wxTreeCtrl_GetNextSibling(self_: *const c_void, item: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetNextVisible(self_: *const c_void, item: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetPrevSibling(self_: *const c_void, item: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetPrevVisible(self_: *const c_void, item: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetQuickBestSize(self_: *const c_void) -> bool;
    pub fn wxTreeCtrl_GetRootItem(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetSelection(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_GetSelections(self_: *const c_void, selection: *mut c_void) -> usize;
    pub fn wxTreeCtrl_GetStateImageList(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeCtrl_HitTest(
        self_: *const c_void,
        point: *const c_void,
        flags: *mut c_void,
    ) -> *mut c_void;
    pub fn wxTreeCtrl_InsertItem(
        self_: *mut c_void,
        parent: *const c_void,
        previous: *const c_void,
        text: *const c_void,
        image: c_int,
        sel_image: c_int,
        data: *mut c_void,
    ) -> *mut c_void;
    pub fn wxTreeCtrl_InsertItem1(
        self_: *mut c_void,
        parent: *const c_void,
        pos: usize,
        text: *const c_void,
        image: c_int,
        sel_image: c_int,
        data: *mut c_void,
    ) -> *mut c_void;
    pub fn wxTreeCtrl_IsBold(self_: *const c_void, item: *const c_void) -> bool;
    pub fn wxTreeCtrl_IsEmpty(self_: *const c_void) -> bool;
    pub fn wxTreeCtrl_IsExpanded(self_: *const c_void, item: *const c_void) -> bool;
    pub fn wxTreeCtrl_IsSelected(self_: *const c_void, item: *const c_void) -> bool;
    pub fn wxTreeCtrl_IsVisible(self_: *const c_void, item: *const c_void) -> bool;
    pub fn wxTreeCtrl_ItemHasChildren(self_: *const c_void, item: *const c_void) -> bool;
    pub fn wxTreeCtrl_OnCompareItems(
        self_: *mut c_void,
        item1: *const c_void,
        item2: *const c_void,
    ) -> c_int;
    pub fn wxTreeCtrl_PrependItem(
        self_: *mut c_void,
        parent: *const c_void,
        text: *const c_void,
        image: c_int,
        sel_image: c_int,
        data: *mut c_void,
    ) -> *mut c_void;
    pub fn wxTreeCtrl_ScrollTo(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_SelectItem(self_: *mut c_void, item: *const c_void, select: bool);
    pub fn wxTreeCtrl_SetButtonsImageList(self_: *mut c_void, image_list: *mut c_void);
    pub fn wxTreeCtrl_SetIndent(self_: *mut c_void, indent: c_uint);
    pub fn wxTreeCtrl_SetSpacing(self_: *mut c_void, spacing: c_uint);
    pub fn wxTreeCtrl_SetItemBackgroundColour(
        self_: *mut c_void,
        item: *const c_void,
        col: *const c_void,
    );
    pub fn wxTreeCtrl_SetItemBold(self_: *mut c_void, item: *const c_void, bold: bool);
    pub fn wxTreeCtrl_SetItemData(self_: *mut c_void, item: *const c_void, data: *mut c_void);
    pub fn wxTreeCtrl_SetItemDropHighlight(
        self_: *mut c_void,
        item: *const c_void,
        highlight: bool,
    );
    pub fn wxTreeCtrl_SetItemFont(self_: *mut c_void, item: *const c_void, font: *const c_void);
    pub fn wxTreeCtrl_SetItemHasChildren(
        self_: *mut c_void,
        item: *const c_void,
        has_children: bool,
    );
    // NOT_SUPPORTED: pub fn wxTreeCtrl_SetItemImage(self_: *mut c_void, item: *const c_void, image: c_int, which: wxTreeItemIcon);
    pub fn wxTreeCtrl_SetItemState(self_: *mut c_void, item: *const c_void, state: c_int);
    pub fn wxTreeCtrl_SetItemText(self_: *mut c_void, item: *const c_void, text: *const c_void);
    pub fn wxTreeCtrl_SetItemTextColour(
        self_: *mut c_void,
        item: *const c_void,
        col: *const c_void,
    );
    pub fn wxTreeCtrl_SetQuickBestSize(self_: *mut c_void, quick_best_size: bool);
    pub fn wxTreeCtrl_SetStateImageList(self_: *mut c_void, image_list: *mut c_void);
    pub fn wxTreeCtrl_SetWindowStyle(self_: *mut c_void, styles: c_long);
    pub fn wxTreeCtrl_SortChildren(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_Toggle(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_ToggleItemSelection(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_Unselect(self_: *mut c_void);
    pub fn wxTreeCtrl_UnselectAll(self_: *mut c_void);
    pub fn wxTreeCtrl_UnselectItem(self_: *mut c_void, item: *const c_void);
    pub fn wxTreeCtrl_SelectChildren(self_: *mut c_void, parent: *const c_void);

    // wxTreeEvent
    pub fn wxTreeEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxTreeEvent_new(command_type: wxEventType, tree: *mut c_void, item: *const c_void) -> *mut c_void;
    pub fn wxTreeEvent_GetItem(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeEvent_GetKeyCode(self_: *const c_void) -> c_int;
    pub fn wxTreeEvent_GetKeyEvent(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeEvent_GetLabel(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeEvent_GetOldItem(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeEvent_GetPoint(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeEvent_IsEditCancelled(self_: *const c_void) -> bool;
    pub fn wxTreeEvent_SetToolTip(self_: *mut c_void, tooltip: *const c_void);

    // wxTreeItemData
    pub fn wxTreeItemData_delete(self_: *mut c_void);
    pub fn wxTreeItemData_new() -> *mut c_void;
    // DTOR: pub fn wxTreeItemData_~wxTreeItemData(self_: *mut c_void);
    pub fn wxTreeItemData_GetId(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeItemData_SetId(self_: *mut c_void, id: *const c_void);

    // wxTreeItemId
    pub fn wxTreeItemId_delete(self_: *mut c_void);
    pub fn wxTreeItemId_new() -> *mut c_void;
    pub fn wxTreeItemId_IsOk(self_: *const c_void) -> bool;
    pub fn wxTreeItemId_GetID(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeItemId_Unset(self_: *mut c_void);
